Correções na arquitetura do projeto

--- a/Server/WebAdmin.Server.csproj
+++ b/Server/WebAdmin.Server.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\..\WebAdmin.Service\WebAdmin.Service.csproj" />
     <ProjectReference Include="..\Client\WebAdmin.Client.csproj" />
     <ProjectReference Include="..\Shared\WebAdmin.Shared.csproj" />
+    <ProjectReference Include="..\WebAdmin.Service\WebAdmin.Service.csproj" />
   </ItemGroup>
 
 
