--- a/WebAdmin.DataAccess/WebAdmin.DataAccess.csproj
+++ b/WebAdmin.DataAccess/WebAdmin.DataAccess.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
     <PackageReference Include="Google.Cloud.Firestore" Version="3.3.0" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.6.0" />
   </ItemGroup>
